[package]
name = "base-proof-worker"
description = "Shared proof worker primitives."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# base
base-prover-service-client.workspace = true
base-prover-service-protocol.workspace = true

# async
async-trait.workspace = true
tokio = { workspace = true, features = ["time"] }

# misc
tracing.workspace = true
thiserror.workspace = true
