[package]
name = "base-balance-monitor"
description = "Periodic onchain balance monitoring for Base services"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
alloy-network.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
tokio-util.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
tracing = { workspace = true, features = ["std"] }

[dev-dependencies]
alloy-node-bindings.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
